# ibbs-tools

./: .flake8  .gitignore  Makefile  Pipfile  README.md  requirements.txt  setup.cfg  sync2json.py  sync2magi.py  sync2qodem.py  syncterm.py
html/: style.css
ibbstools/: __init__.py  check_bbs.py  cli.py  filters.py  models.py
ibbstools/command/: check.py  export.py  import_list.py  initdb.py  render.py  sync2json.py  sync2magi.py  sync2qodem.py
ibbstools/templates/: bbslist.html  page.html
ibbstools/templates/format/: etherterm  magiterm  qodem  syncterm
