[metadata]
name = ibbstools
version = attr: ibbstools.__version__
description = Tools for working with the IBBS list
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/ibbs-tools
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    ibbs = ibbstools.cli:main
